--- a/styles.css
+++ b/styles.css
@@ -1,118 +1,103 @@
 body {
-  margin: 0;
-  padding: 0;
-  background-color: #f2f2f2;
-  font-family: Arial, sans-serif;
-}
+    margin: 0;
+    padding: 0;
+    background-color: #2C3333;
+    font-family: Arial, sans-serif;
+  }
 
+  .container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 2.5rem 5vw;
+    height: 70vh;
+  }
+  
+  .container-buttons {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    height: 100%;
+  }
+  
+  h1 {
+    font-size: 36px;
+    font-weight: bold;
+    font-family: "Lato", sans-serif;
+    color: #F1D00A;
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    text-transform: uppercase;
+  }
+  
+  
+  .textarea {
+    font-family: Consolas, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New;
+    /* width: calc(100% - 20px); */
+    width: 35vw;
+    height: 100%;
+    padding: 10px;
+    border: 2px solid #ccc;
+    border-radius: 5px;
+    background-color: #fff;
+    resize: none;
+    box-sizing: border-box;
+    transition: border-color 0.2s ease;
+  }
+  
+  .textarea:focus {
+    border-color: #008080; /* teal */
+  }
+  
+  #convert-btn {
+    display: block;
+    padding: 0.8rem;
+    border: none;
+    border-radius: 50px;
+    background-color: #ACD572;
+    color: #fff;
+    font-size: 1.5rem;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  #convert-btn:hover {
+    background-color: #3e8e41;
+  }
+  
+  #convert-btn:focus {
+    outline: none;
+    box-shadow: 0 0 0 2px #fff, 0 0 0 4px #4CAF50;
+  }
+  
+  #options {
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 1.2rem;
+    padding: 0.5rem; 
+  }
+  
+  #options::-webkit-scrollbar {
+    background-color: #f5f5f5;
+    width: 5px;
+  }
 
+  #options::-webkit-scrollbar-thumb {
+    background-color: #cccccc;
+    border-radius: 10px;
+  }
+  
+  option:checked {
+    background-color: #c9c9c9;
+  }
 
-.container {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  width: 100%;
-  max-width: 1200px;
-  margin: 0 auto;
-}
-
-
-h1 {
-  font-size: 36px;
-  font-weight: bold;
-  color: #008080;
-  text-align: center;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  text-transform: uppercase;
-}
-
-
-.textarea {
-  font-family:Consolas,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New;
-  width: calc(50% - 2px);
-  height: 450px;
-  padding: 10px;
-  border: 2px solid #ccc;
-  border-radius: 5px;
-  background-color: #fff;
-  resize: none;
-  box-sizing: border-box;
-  transition: border-color 0.2s ease;
-}
-
-.textarea:focus {
-  border-color: #008080; /* teal */
-}
-
-
-.dropdown {
-  font-size: 16px;
-  margin: 0 20px;
-  padding: 10px;
-  border: 2px solid #ccc;
-  border-radius: 5px;
-  background-color: #fff;
-  transition: border-color 0.2s ease;
-  appearance: none;
-  -webkit-appearance: none;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23008080'%3E%3Cpath d='M7.293 10.707L3.586 7l-.707.707L7.293 12.12l6.414-6.414L12.707 6z'/%3E%3C/svg%3E");
-  background-repeat: no-repeat;
-  background-position: right 10px center;
-}
-
-.dropdown::-ms-expand {
-  display: none;
-}
-
-.dropdown:focus-within {
-  border-color: #008080; /* teal */
-}
-
-#convert-btn {
-  display: block;
-  margin-top: 20px;
-  padding: 1rem 2rem;
-  border: none;
-  border-radius: 5px;
-  background-color: #4CAF50;
-  color: #fff;
-  font-size: 1rem;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-#convert-btn:hover {
-  background-color: #3e8e41;
-}
-
-#convert-btn:focus {
-  outline: none;
-  box-shadow: 0 0 0 2px #fff, 0 0 0 4px #4CAF50;
-}
-
-
-.loading {
-  display: none;
-  position: absolute;
-  top: 50vh;
-  left: 50vw;
-  transform: translate(-50%, -50%);
-  z-index: 999;
-}
-
-.loading-icon {
-  border: 16px solid #f3f3f3;
-  border-top: 16px solid rgba(52, 152, 219, 0.8);
-  border-radius: 50%;
-  width: 10vw;
-  height: 10vw;
-  animation: spin 2s linear infinite;
-}
-
-
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+@media (max-width: 768px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+  }
+  .textarea {
+    width: 80vw;
+  }
 }
